[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "bbf"
version = "0.1.0"
description = "Brute-force one unknown BD_ADDR octet (the UAP) via l2ping, with an optional ubertooth-rx survey front-end."
readme = "README.md"
requires-python = ">=3.8"
license = { text = "MIT" }
authors = [{ name = "Your Name" }]
keywords = ["bluetooth", "bd_addr", "l2ping", "ubertooth", "security-research"]
classifiers = [
    "Programming Language :: Python :: 3",
    "Operating System :: POSIX :: Linux",
    "Topic :: Security",
    "Intended Audience :: Information Technology",
]
dependencies = []

[project.optional-dependencies]
dev = ["pytest>=7"]

[project.scripts]
bbf = "bbf.cli:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
